crates/atlas-runtime/tests/stdlib/snapshots/stdlib__functions__prelude_global_shadowing_function.snap
---
source: crates/atlas-runtime/tests/stdlib/functions.rs
assertion_line: 1443
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1012
  message: "Cannot shadow prelude builtin 'print' in global scope"
  file: "<unknown>"
  line: 1
  column: 69
  length: 5
  snippet: ""
  label: shadows prelude builtin
  help: Prelude builtins cannot be redefined at the top level. Use a different name or shadow in a nested scope.
